# specta

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  install.json  package-lock.json  package.json  pyproject.toml  tsconfig.json  webpack.config.js
.github/workflows/: build.yaml  check-release.yml  publish-release.yml
app/: bootstrap.js  index.template.html  index.template.js  publicpath.js  webpack.config.js
app/specta/: package.json
demo/: environment.yml  jupyter-lite.json
demo/files/: blog.ipynb  demo.ipynb  slides.ipynb
demo/files/plainb/: classic_demo.md  complicated.py  image_processing.py  myst_demo.md  numpy_demo.py
schema/: app-meta.json  cell-meta.json
script/: build-dev.mjs  copy-reveal.mjs
specta/: __init__.py  addon.py
specta/static/: index.html  jupyter-lite.json
src/: app.ts  config_plugin.ts  create_notebook_panel.ts  extension_plugins.ts  index.ts  plugins.ts  sharedscope.ts  shell.ts  specta_cell_output.ts  specta_cell_output.tsx  specta_model.ts  specta_widget.ts  specta_widget_factory.ts  token.ts  tool.ts
src/components/: cellSkeleton.tsx  divider.tsx  iconButton.tsx
src/components/icon/: gear.tsx
src/components/placeHolder/: index.tsx
src/document/: factory.ts  factory.tsx  plugin.ts  widget.ts
src/extension/: plugin.ts
src/layout/: article.ts  default.ts  index.ts  layout_registry.ts  plugin.ts  slides.ts
src/metadata/: index.ts
src/topbar/: index.tsx  kernelStatus.tsx  menuComponent.tsx  plugin.tsx  rankedPanel.ts  settingDialog.tsx  titleComponent.tsx  topbarWidget.tsx  widget.tsx
style/: article.css  base.css  index.css  index.js  skeleton.css  slides.css  style.css
