[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling>=1.5.0,<2",
  "hatch-nodejs-version>=0.3.2",
  "jupyterlab>=4.0.0,<5",
]

[project]
name = "specta"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
  "Framework :: Jupyter",
  "Framework :: Jupyter :: JupyterLab",
  "Framework :: Jupyter :: JupyterLab :: 4",
  "Framework :: Jupyter :: JupyterLab :: Extensions",
  "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = ["jupyterlite-core>=0.6.0b0,<0.7"]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build.targets.sdist]
exclude = [".github"]

[tool.hatch.build.targets.wheel]
exclude = [".github"]

[tool.hatch.build.hooks.version]
path = "specta/_version.py"

[tool.hatch.build.targets.wheel.shared-data]
"specta/labextension" = "share/jupyter/labextensions/specta"
"install.json" = "share/jupyter/labextensions/specta/install.json"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
  "specta/labextension/static/style.js",
  "specta/labextension/package.json",
]
skip-if-exists = ["specta/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:all"
npm = ["npm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["npm"]
source_dir = "src"
build_dir = "specta/labextension"

[tool.check-wheel-contents]
ignore = ["W002"]

[project.entry-points."jupyterlite.addon.v0"]
specta = "specta.addon:SpectaAddon"

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["specta"]
